Added arrow to button -fixed old text code in activity_main.xml -added code to add arrow png

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,9 @@
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:padding="24dp"
-        tools:text="@string/question_australia" />
+        tools:text="@string/question_australia"/>
 
     //Button Layout
     <LinearLayout
@@ -41,7 +42,9 @@
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button" />
+            android:text="@string/next_button"
+            android:drawableEnd="@drawable/arrow_right"
+            android:drawablePadding="4dp"/>
 
 
     </LinearLayout>
