--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,12 +47,26 @@
         android:layout_marginTop="24dp"
         android:text="@string/cheat_button" />
 
-    //Next Button
-    <ImageButton
-        android:id="@+id/next_button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/arrow_right"
-        android:contentDescription="@string/next_button"/>
+        android:orientation="horizontal">
+
+        //Back Button
+        <ImageButton
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_left"
+            android:contentDescription="@string/back_button"/>
+
+        //Next Button
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_right"
+            android:contentDescription="@string/next_button"/>
+    </LinearLayout>
 
 </LinearLayout>
